--- a/photogramstart/build.gradle
+++ b/photogramstart/build.gradle
@@ -22,6 +22,7 @@ dependencies {
 	implementation "javax.servlet:jstl"
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
+	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation "org.springframework.boot:spring-boot-starter-data-jpa"
 	implementation "org.springframework.boot:spring-boot-starter-oauth2-client"
 	implementation "org.springframework.boot:spring-boot-starter-security"
