--- a/photogramstart/build.gradle
+++ b/photogramstart/build.gradle
@@ -27,7 +27,8 @@ dependencies {
 	implementation "org.springframework.boot:spring-boot-starter-oauth2-client"
 	implementation "org.springframework.boot:spring-boot-starter-security"
 	implementation "org.springframework.boot:spring-boot-devtools"
-	implementation "org.mariadb.jdbc:mariadb-java-client"
+//	implementation "org.mariadb.jdbc:mariadb-java-client"
+	runtimeOnly 'com.mysql:mysql-connector-j'
 	implementation "org.projectlombok:lombok"
 	testImplementation "org.springframework.security:spring-security-test"
 }
