--- a/photogramstart/src/main/resources/application.yml
+++ b/photogramstart/src/main/resources/application.yml
@@ -12,11 +12,17 @@ spring:
       prefix: /WEB-INF/views/
       suffix: .jsp
       
+#  datasource:
+#    driver-class-name: org.mariadb.jdbc.Driver
+#    url: jdbc:mariadb://localhost:3306/photogram?serverTimezone=Asia/Seoul
+#    username: tayo
+#    password: tayo1234
+
   datasource:
-    driver-class-name: org.mariadb.jdbc.Driver
-    url: jdbc:mariadb://localhost:3306/photogram?serverTimezone=Asia/Seoul
-    username: tayo
-    password: tayo1234
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    url: jdbc:mysql://localhost:3306/photogram?serverTimezone=Asia/Seoul
+    username: root
+    password: 1234
     
   jpa:
     open-in-view: true
