--- a/photogramstart/build.gradle
+++ b/photogramstart/build.gradle
@@ -31,6 +31,8 @@ dependencies {
 	runtimeOnly 'com.mysql:mysql-connector-j'
 	implementation "org.projectlombok:lombok"
 	testImplementation "org.springframework.security:spring-security-test"
+	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-aop', version: '2.7.2'
+	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
 }
 
 tasks.named('test') {
