--- a/photogramstart/src/main/resources/application.yml
+++ b/photogramstart/src/main/resources/application.yml
@@ -11,7 +11,7 @@ spring:
     view:
       prefix: /WEB-INF/views/
       suffix: .jsp
-      
+
 #  datasource:
 #    driver-class-name: org.mariadb.jdbc.Driver
 #    url: jdbc:mariadb://localhost:3306/photogram?serverTimezone=Asia/Seoul
@@ -27,7 +27,7 @@ spring:
   jpa:
     open-in-view: true
     hibernate:
-      ddl-auto: update # create, update, none
+      ddl-auto: create # create, update, none
       naming:
         physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
     show-sql: true
@@ -50,6 +50,39 @@ spring:
             scope:
               - public_profile
               - email
+
+          kakao:
+            client-id: 453a3dc07a4c653e73d7beeeb7544921
+            redirect-uri: http://localhost:8080/login/oauth2/code/kakao
+            authorization-grant-type: authorization_code
+            client-authentication-method: POST
+            client-name: Kakao
+            scope:
+              - profile_nickname
+              - account_email
+
+          naver:
+            clientId: lQFX_VyB3ggDJUW9bdKy
+            client-secret: ubesljBWYN
+            redirect-uri: http://localhost:8080/login/oauth2/code/naver
+            authorization-grant-type: authorization_code
+            scope:
+              - name
+              - email
+            client-name: Naver
+
+        provider:
+          kakao:
+            authorization-uri: https://kauth.kakao.com/oauth/authorize
+            token-uri: https://kauth.kakao.com/oauth/token
+            user-info-uri: https://kapi.kakao.com/v2/user/me
+            user-name-attribute: id
+          naver:
+            authorization-uri: https://nid.naver.com/oauth2.0/authorize
+            token-uri: https://nid.naver.com/oauth2.0/token
+            user-info-uri: https://openapi.naver.com/v1/nid/me
+            user-name-attribute: response
+
 
 file:
   path: C:/workspace/springbootwork/upload/
